Fixed the vertical-alignment of the Clear button for FormField and CurrencyField.

--- a/src/components/CurrencyField/CurrencyField.scss
+++ b/src/components/CurrencyField/CurrencyField.scss
@@ -121,7 +121,7 @@
   display: none;
   position: absolute;
   right: 20px;
-  top: 20px;
+  top: 19px;
 }
 
 .clear-icon {
