--- a/src/components/FormField/FormField.scss
+++ b/src/components/FormField/FormField.scss
@@ -122,7 +122,7 @@
   display: none;
   position: absolute;
   right: 20px;
-  top: 20px;
+  top: 19px;
 }
 
 .clear-icon {
